# collection-manager

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
collectionmanager/: __main__.py  albumart.py  app.py  autofix.py  charts.py  check.py  database.py  dialogs.py  discogs.py  fix_numbers.py  genre.py  models.py  track_info.py
collectionmanager/db/: database.py  models.py
collectionmanager/resources/: db_schema.sql
collectionmanager/services/: __init__.py  base.py  discogs.py  lastfm.py  musicbrainz.py  trackinfo.py
collectionmanager/threads/: scandirectory.py
collectionmanager/ui/: dialogs.py  main_widget.ui  main_window.ui  models.py  track_details.ui  widgets.py  windows.py
collectionmanager/ui/ui/: main_widget.ui  track_details.ui
collectionmanager/widgets/: main.py
collectionmanager/windows/: main.py
