[tool.poetry]
name = "collection-manager"
version = "0.1.0"
description = ""
authors = ["Kostas Kokkoros <mavroprovato@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
PyQt5 = "^5.15.2"
mutagen = "^1.45.1"
SQLAlchemy = "^1.3.23"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
