[tool.poetry]
name = "collection-manager"
version = "0.1.0"
description = ""
authors = ["Kostas Kokkoros <mavroprovato@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pyqt5 = "^5.15.11"
mutagen = "^1.47.0"
sqlalchemy = "^2.0.34"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
